fixed z-index on untoggle btn

--- a/styles/crypto.scss
+++ b/styles/crypto.scss
@@ -25,6 +25,7 @@
       font-weight: 600;
       background: black !important;
       transition: var(--transition-150);
+      z-index: 2;
       &:hover {
         color: white !important;
         background: #212529 !important;
